# ogre-physics

./: README.md
include/: XkConfig.h  XkDebugStr.h  XkSingleton.h
skindemo/: CMakeLists.txt  XkPhysicsWorld.cpp  XkPhysicsWorld.h  XkPhysicsWorld_Havok.cpp  XkPhysicsWorld_Havok.h  main.cpp
